--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,9 @@ body {
     position: relative;
     font-size: 50px;
     top: 50px;
-    left: 150px;
-    width: 50%;
-    margin: 0%;
-    text-align: right;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
     font-family: 'Ubuntu', sans-serif;
     color: #063876;
 }
@@ -70,11 +69,11 @@ body {
 /*evans login text  */
 #loginpr {
     position: relative;
-    top: 100px;
+    top: 50px;
     font-family: 'Ubuntu', sans-serif;
     font-size: 40px;
-    width: 90%;
-    left: 40px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     color: #063876;
 }
@@ -366,8 +365,8 @@ select {
 
 #loginImage {
     position: absolute; /* Allows precise positioning within the container */
-    top: 70px; /* Positions the image 5px from the top */
-    right: 450px; /* Positions the image 5px from the right edge */
+    top: 40px; /* Positions the image 5px from the top */
+    right: 675px; /* Positions the image 5px from the right edge */
     width: 5%; /* Sets the width of the image to 50px */
     height: auto; /* Ensures the height adjusts proportionally */
 }
