--- a/css/styles_dashboard.css
+++ b/css/styles_dashboard.css
@@ -209,7 +209,7 @@ body {
 
 #contactslist {
     width: 100%;
-    height: 80vh;
+    height: 70%;
     overflow-y: auto;
     overflow-x: hidden;
 }
