--- a/css/styles_dashboard.css
+++ b/css/styles_dashboard.css
@@ -155,7 +155,7 @@ body {
 #contactstab {
     display: block;
     background-color: #edeff0;
-    width: 375px;
+    width: 22%;
     height: 100vh;
     border-right: 2px solid #dedede;
 }
