--- a/css/styles.css
+++ b/css/styles.css
@@ -509,7 +509,55 @@ input[type="text"], input[type="password"] {
     }
 
 
-
     /* Testttt*/
+    .loader-container {
+        display: none; /* Initially hidden */
+        justify-content: center;
+        align-items: center;
+        position: fixed; /* Makes it cover the entire screen */
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #c8d9eb;
+        background-image: url('/Users/evansbakire/Downloads/lampstack/images/background1.jpg');
+        z-index: 9999; /* Ensure loader is on top of everything */
+    }
+    
+    .bouncing-dots {
+        display: none; /* Initially hidden */
+        justify-content: space-between;
+        width: 60px;
+    }
+    
+    .dot {
+        width: 15px;
+        height: 15px;
+        background-color: #29485c;
+        border-radius: 50%;
+        animation: bounce 1.5s infinite;
+    }
+    
+    .dot:nth-child(1) {
+        animation-delay: 0s;
+    }
+    
+    .dot:nth-child(2) {
+        animation-delay: 0.3s;
+    }
+    
+    .dot:nth-child(3) {
+        animation-delay: 0.6s;
+    }
+    
+    @keyframes bounce {
+        0%, 100% {
+            transform: translateY(0);
+        }
+        50% {
+            transform: translateY(-20px);
+        }
+    }
+    
 
    
