--- a/css/styles_dashboard.css
+++ b/css/styles_dashboard.css
@@ -218,6 +218,12 @@ body {
     overflow-x: hidden;
 }
 
+#contactslist p {
+    font-size: 18px;
+    color: #273c4f;
+    margin-left: 10px;
+}
+
 .examplecontact {
     display: block;
     border-bottom: 1px solid #dedede;
@@ -255,7 +261,52 @@ body {
 */
 
 #flexview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+#fvph {
+    display: inline;
+    margin-top: 10vh;
+    text-align: center;
+    padding: 60px;
+    border: 2px dashed #ccc;
+    border-radius: 10px;
+    background-color: #edeff0;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+#fvph p {
+    font-family: 'Ubuntu', sans-serif;
+    padding-bottom: 10px;
+    font-size: 20px;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+#fvph button {
+    background-color: #273c4f;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+#fvph button:hover {
+    background-color: #304659;
+    transition-duration: 0.5s;
+}
+
+#fvph button i {
+    vertical-align: middle;
 }
 
 /*
