--- a/css/styles_dashboard.css
+++ b/css/styles_dashboard.css
@@ -311,46 +311,92 @@ body {
 
 .contact-box {
     border: 1px solid #ccc;
-    padding: 15px;
-    margin: 10px;
+    padding: 40px;
+    margin: 10vh;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #edeff0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     width: 100%;
+    font-size: 18px;
+}
+
+.contact-content {
+    display: flex;
+    flex-direction: row;
 }
 
 .contact-details {
+    width: 300px;
     margin-bottom: 10px;
 }
 
-    .contact-details p {
-        margin: 5px 0;
-    }
+.contact-photo i {
+    color: white;
+    font-size: 120px;
+    margin-right: 30px;
+    background-color: #273c4f;
+    border: 2px solid #273c4f;
+    border-radius: 61px;
+    align-content: center;
+}
+
+.contact-details p {
+    margin: 5px 0;
+}
 
 .contact-buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin-left: 115px;
 }
 
-    .contact-buttons button {
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 14px;
-    }
+.contact-buttons button {
+    margin-top: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 90px;
+}
 
-        .contact-buttons button.delete-btn {
-            background-color: #e74c3c;
-            color: white;
-        }
+.contact-buttons button.update-btn {
+    background-color: #3498db;
+    color: white;
+    transition: 0.35s;
+    border: 3px solid #edeff0;
+    border-radius: 10px;
+}
 
-        .contact-buttons button.update-btn {
-            background-color: #3498db;
-            color: white;
-        }
+.contact-buttons button.update-btn:hover {
+    box-sizing: border-box;
+    color: #3498db;
+    background-color: white;
+    border: 3px solid #3498db;
+    border-radius: 10px;
+    transition: 0.35s;
+    font-weight: bold;
+}
+
+.contact-buttons button.delete-btn {
+    background-color: #e74c3c;
+    color: white;
+    transition: 0.35s;
+    border: 3px solid #edeff0;
+    border-radius: 10px;
+}
+
+.contact-buttons button.delete-btn:hover {
+    box-sizing: border-box;
+    color: #e74c3c;
+    background-color: white;
+    border: 3px solid #e74c3c;
+    border-radius: 10px;
+    transition: 0.35s;
+    font-weight: bold;
+}
 
 /*
 
