--- a/css/styles_dashboard.css
+++ b/css/styles_dashboard.css
@@ -464,6 +464,83 @@ body {
     margin-right: auto;
 }
 
+
+input#ucontactfname {
+    font-family: 'Ubuntu';
+    font-size: 14px;
+    /* border: beige; */
+    padding: 2px;
+    margin: 3px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    transition: border-color 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96), box-shadow 0.3s ease-in-out;
+}
+
+input#ucontactlname {
+    font-family: 'Ubuntu';
+    font-size: 14px;
+    padding: 2px;
+    margin: 3px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    transition: border-color 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96), box-shadow 0.3s ease-in-out;
+}
+
+input#ucontactemail {
+    font-family: 'Ubuntu';
+    font-size: 14px;
+    padding: 2px;
+    margin: 3px 0;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    transition: border-color 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96), box-shadow 0.3s ease-in-out;
+}
+
+input#ucontactphone {
+    font-family: 'Ubuntu';
+    font-size: 14px;
+    padding: 2px;
+    margin: 3px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    transition: border-color 0.3s cubic-bezier(0.46, 0.03, 0.52, 0.96), box-shadow 0.3s ease-in-out;
+}
+
+p#ucontactid {
+    font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+button#cancelupbttn {
+    background-color: red;
+    color: white;
+    transition: 0.35s;
+    border: 3px solid #edeff0;
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 90px;
+}
+
+button#updateContactBtn {
+    background-color: #3498db;
+    color: white;
+    transition: 0.35s;
+    border: 3px solid #edeff0;
+    border-radius: 10px;
+    margin-top: 20px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 90px;
+}
+
 /*
 
     DELETE POPUP
